@@ -1,3 +1,15 @@
+Mon Mar 01 18:30:25 2005  Gan Deng  <gan.deng@vanderbilt.edu>
+
+	* examples/Hello/step-by-step.html
+	* DAnCE/examples/Hello/step-by-step.html
+
+          Modified these two documentation page to fix some errors.
+
+
+	* DAnCE/examples/Hello/Hello_Base/Hello_Base.mpc
+
+          Fixed wrong shared library names and project names.
+
 Sat Feb 26 14:38:46 2005  Arvind S. Krishna  <arvindk@tango.dre.vanderbilt.edu>
 
 	* examples/handcrafted/BasicSP_EC/BMClosedED/BMClosedED.mpc:
